# usbrelay-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-deb.yml
src/: lib.rs  sainsmart.rs
