[package]
name = "usbrelay-rs"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Hoover <ch@murgatroid.com>"]
description = "USB relay support"
readme = "README.md"
repository = "https://github.com/charlieh0tel/usbrelay-rs"
license = "MIT"
keywords = ["usb"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
clap-num = "1.1.1"
clap_derive = "4.5.0"
libftdi1-sys = { version = "1.1.3", default-features = false }

[package.metadata.deb]
maintainer = "Christopher Hoover <ch@murgatroid.com>"
copyright = "2024, Christopher Hoover <ch@murgatroid.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
USB relay utilities."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sainsmart", "usr/bin/", "755"],
]
